@@ -1,10 +1,12 @@
 
 package Paws::MachineLearning::GetEvaluationOutput;
   use Moose;
+  has ComputeTime => (is => 'ro', isa => 'Int');
   has CreatedAt => (is => 'ro', isa => 'Str');
   has CreatedByIamUser => (is => 'ro', isa => 'Str');
   has EvaluationDataSourceId => (is => 'ro', isa => 'Str');
   has EvaluationId => (is => 'ro', isa => 'Str');
+  has FinishedAt => (is => 'ro', isa => 'Str');
   has InputDataLocationS3 => (is => 'ro', isa => 'Str');
   has LastUpdatedAt => (is => 'ro', isa => 'Str');
   has LogUri => (is => 'ro', isa => 'Str');
@@ -12,6 +14,7 @@ package Paws::MachineLearning::GetEvaluationOutput;
   has MLModelId => (is => 'ro', isa => 'Str');
   has Name => (is => 'ro', isa => 'Str');
   has PerformanceMetrics => (is => 'ro', isa => 'Paws::MachineLearning::PerformanceMetrics');
+  has StartedAt => (is => 'ro', isa => 'Str');
   has Status => (is => 'ro', isa => 'Str');
 
 
@@ -22,6 +25,15 @@ package Paws::MachineLearning::GetEvaluationOutput;
 Paws::MachineLearning::GetEvaluationOutput
 
 =head1 ATTRIBUTES
+
+
+=head2 ComputeTime => Int
+
+The approximate CPU time in milliseconds that Amazon Machine Learning
+spent processing the C<Evaluation>, normalized and scaled on
+computation resources. C<ComputeTime> is only available if the
+C<Evaluation> is in the C<COMPLETED> state.
+
 
 
 =head2 CreatedAt => Str
@@ -51,6 +63,14 @@ The evaluation ID which is same as the C<EvaluationId> in the request.
 
 
 
+=head2 FinishedAt => Str
+
+The epoch time when Amazon Machine Learning marked the C<Evaluation> as
+C<COMPLETED> or C<FAILED>. C<FinishedAt> is only available when the
+C<Evaluation> is in the C<COMPLETED> or C<FAILED> state.
+
+
+
 =head2 InputDataLocationS3 => Str
 
 The location of the data file or directory in Amazon Simple Storage
@@ -60,7 +80,7 @@ Service (Amazon S3).
 
 =head2 LastUpdatedAt => Str
 
-The time of the most recent edit to the C<BatchPrediction>. The time is
+The time of the most recent edit to the C<Evaluation>. The time is
 expressed in epoch time.
 
 
@@ -119,6 +139,14 @@ technique to measure performance.
 
 For more information about performance metrics, please see the Amazon
 Machine Learning Developer Guide.
+
+
+
+=head2 StartedAt => Str
+
+The epoch time when Amazon Machine Learning marked the C<Evaluation> as
+C<INPROGRESS>. C<StartedAt> isn't available if the C<Evaluation> is in
+the C<PENDING> state.
 
 
 
